--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "lucide-react": "latest",
-    "@google/genai": "^0.1.0"
+    "@google/genai": "^1.30.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
+    "@babel/preset-react": "^7.26.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@tarojs/cli": "4.0.7",
     "@tarojs/webpack5-runner": "4.0.7",
     "@types/react": "^18.0.0",
