--- a/package.json
+++ b/package.json
@@ -30,33 +30,34 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.20.0",
+    "@google/genai": "^1.30.0",
     "@tarojs/components": "4.0.7",
     "@tarojs/helper": "4.0.7",
     "@tarojs/plugin-framework-react": "4.0.7",
-    "@tarojs/plugin-platform-weapp": "4.0.7",
     "@tarojs/plugin-platform-h5": "4.0.7",
+    "@tarojs/plugin-platform-weapp": "4.0.7",
     "@tarojs/react": "4.0.7",
     "@tarojs/runtime": "4.0.7",
     "@tarojs/shared": "4.0.7",
     "@tarojs/taro": "4.0.7",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
     "lucide-react": "latest",
-    "@google/genai": "^1.30.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-react": "^7.26.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@tarojs/cli": "4.0.7",
     "@tarojs/webpack5-runner": "4.0.7",
+    "@types/node": "^18.0.0",
     "@types/react": "^18.0.0",
     "@types/webpack-env": "^1.13.6",
-    "@types/node": "^18.0.0",
+    "autoprefixer": "^10.4.0",
     "babel-preset-taro": "4.0.7",
-    "typescript": "^5.0.0",
-    "webpack": "^5.0.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "typescript": "^5.0.0",
+    "webpack": "^5.0.0"
   }
 }
