--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "autoprefixer": "^10.4.0",
     "babel-preset-taro": "4.0.7",
     "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.0.0",
     "webpack": "^5.0.0"
   }
